--- a/front-end/package.json
+++ b/front-end/package.json
@@ -9,7 +9,9 @@
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-markdown": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-test-renderer": "^17.0.2",
     "react-use": "^17.2.4",
     "web-vitals": "^1.0.1"
   },
