--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "concurrently": "^6.2.0"
   },
   "scripts": {
-    "start": "concurrently \"cd front-end && npm start\" \"cd back-end && node server.js\""
+    "start": "concurrently \"cd front-end && npm start\" \"cd back-end && node server.js\"",
+    "install": "concurrently \"cd front-end && npm install\" \"cd back-end && npm install\""
   }
 
 }
