--- a/front-end/package.json
+++ b/front-end/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "dangerously-set-html-content": "^1.0.8",
     "fs": "^0.0.1-security",
     "github-calendar": "^2.2.7",
+    "html-react-parser": "^1.2.7",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
