--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,6 +15,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-markdown": "^6.0.2",
+    "react-modal": "^3.14.3",
     "react-scripts": "4.0.3",
     "react-test-renderer": "^17.0.2",
     "react-use": "^17.2.4",
