--- a/front-end/package.json
+++ b/front-end/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.2",
     "react-markdown": "^6.0.2",
     "react-modal": "^3.14.3",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-test-renderer": "^17.0.2",
     "react-use": "^17.2.4",
