--- a/back-end/package.json
+++ b/back-end/package.json
@@ -12,6 +12,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "github-calendar": "^2.2.7",
+    "helmet": "^4.6.0",
     "lodash": "^4.17.21",
     "markdown-it": "^12.1.0",
     "request": "^2.88.2",
