--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "concurrently": "^6.2.0"
   },
   "scripts": {
-    "start": "concurrently \"cd front-end && npm start\" \"cd back-end && node server.js\"",
+    "start": "concurrently \"cd front-end && npm start\" \"cd back-end && nodemon server.js\"",
     "install": "concurrently \"cd front-end && npm install\" \"cd back-end && npm install\""
   }
 }
