--- a/front-end/package.json
+++ b/front-end/package.json
@@ -22,6 +22,7 @@
     "react-test-renderer": "^17.0.2",
     "react-use": "^17.2.4",
     "rich-markdown-editor": "^11.21.3",
+    "styled-components": "^5.3.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
