fix: nginx & api caller

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,20 +1,12 @@
-upstream front {
-    server front:3000;
-}
-upstream back {
-    server back:4000;
-}
-
-
 server {
   listen     80;
   server_name  localhost;
 
   location / {
-    proxy_pass http://front;
+    proxy_pass http://front:3000/;
   }
 
-  location /rest/{
-    proxy_pass http://back;
+  location /api/ {
+    proxy_pass http://back:4000/;
   }
 }
