fix: nginx 443 port

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -8,7 +8,7 @@ upstream back {
 
 server {
   listen     80;
-  server_name  localhost;
+  server_name  willki.dev;
 
   location / {
     proxy_pass http://front;
