--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,8 @@ services:
     container_name: front
     ports:
       - "3000:3000"
-
+    volumes:
+      - ./frontend:/frontend
     command: ["yarn", "start"]
     
   back:
@@ -14,6 +15,8 @@ services:
     container_name: back
     ports:
       - "4000:4000"
+    volumes:
+      - ./backend:/backend
     command: ["node", "server.js"]
 
   nginx:
@@ -22,3 +25,8 @@ services:
     ports:
       - "80:80"
       - "443:443"
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - front
+      - back
