--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       - "4000:4000"
     volumes:
       - ./backend:/backend
-    command: ["nodemon", "server.js"]
+    command: ["yarn", "run", "start"]
     depends_on:
       - mongo
 
@@ -40,7 +40,17 @@ services:
       - "443:443"
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/certbot/conf:/etc/letsencrypt
+      - ./nginx/certbot/www:/var/www/certbot
     depends_on:
       - front
       - back
       - mongo
+
+  certbot: # certbot 서비스 추가
+    image: certbot/certbot
+    container_name: certbot
+    volumes:
+        - ./nginx/certbot/conf:/etc/letsencrypt
+        - ./nginx/certbot/www:/var/www/certbot
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
